--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -12,6 +12,7 @@
 
 		<div class="col-4">
 
+
 			<div class="card">
   				<h5 class="card-header">Follows</h5>
   				<div class="card-body">
@@ -23,7 +24,9 @@
 				</div>
 			</div>
 
+
 			<br/><br/>
+
 
 			<div class="card">
   				<h5 class="card-header">Followed By</h5>
@@ -35,6 +38,29 @@
     				</p>
   				</div>
 			</div>
+
+
+			<br/>
+
+
+			<form method=POST>
+			{% csrf_token %}
+			{% if profile in user.profile.follows.all %}
+ 			<button class="btn btn-outline-danger" name="follow" value="unfollow" type="submit">
+ 				Unfollow @{{ profile.user.username|lower}}
+ 			</button>
+
+			{% else %}
+			<button class="btn btn-outline-success" name="follow" value="follow" type="submit">
+ 				Follow @{{ profile.user.username|lower}}
+ 			</button>
+
+			{% endif %}
+			</form>
+
+
+			<br/>
+
 
 		</div>
 		
