--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -8,7 +8,16 @@
 
 		<div class="col-8">
 			<h1>{{ profile.user.username }}'s Profile</h1>
+			<br/>
+			{% if meeps %}
+				{% for meep in meeps %}
+					<div class="alert alert-dark" role="alert">
+						{{ meep }}
+					</div><br/><br/>
+				{% endfor %}
+			{% endif %}
 		</div>
+
 
 		<div class="col-4">
 
