added form for Meeps

--- a/social/musker/templates/home.html
+++ b/social/musker/templates/home.html
@@ -1,13 +1,40 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+
+	<div class="container text-center">
+		<div class="row">
+			<div class="col-8">
+
+
 	<h1>Meeps!</h1>
 <br/>
 	{% for meep in meeps %}
 		<div class="alert alert-dark" role="alert">
-		  {{ meep }}
+		  {{ meep.body }}<br/>
+		  <small class="text-muted">
+		  	({{ meep.created_at}}) By 
+		  	@{{ meep.user.username }}
+
+		  </small>
 		</div><br/><br/>
 
 	{% endfor %}
+
+</div>
+
+<div class="col-4">
+				<br/><br/><br/>
+{% if form %}
+<form  method=POST>
+	{% csrf_token %}
+  	{{ form.as_p }}
+
+
+  <button type="submit" class="btn btn-secondary">Post Meep!</button>
+</form>
+{% endif %}
+</div>
 
 {% endblock %}
