--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -56,20 +56,30 @@
 			<br/>
 
 
-			<form method=POST>
-			{% csrf_token %}
-			{% if profile in user.profile.follows.all %}
- 			<button class="btn btn-outline-danger" name="follow" value="unfollow" type="submit">
- 				Unfollow @{{ profile.user.username|lower}}
- 			</button>
+			{% if request.user.id is not profile.user.id %}
+				<form method=POST>
+				{% csrf_token %}
+				{% if profile in user.profile.follows.all %}
+				<button class="btn btn-outline-danger" name="follow" value="unfollow" type="submit">
+					Unfollow @{{ profile.user.username|lower}}
+				</button>
 
-			{% else %}
-			<button class="btn btn-outline-success" name="follow" value="follow" type="submit">
- 				Follow @{{ profile.user.username|lower}}
- 			</button>
+				{% else %}
+				<button class="btn btn-outline-success" name="follow" value="follow" type="submit">
+					Follow @{{ profile.user.username|lower}}
+				</button>
 
+				{% endif %}
 			{% endif %}
 			</form>
+
+
+			<br/>
+
+
+			{% if request.user.id == profile.user.id %}
+				<a href="{% url 'update_user' %}" class="btn btn-outline-secondary">Update Profile</a>
+			{% endif %}
 
 
 			<br/>
