--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -26,6 +26,12 @@
 		<div class="col-4">
 
 
+			{% if profile.profile_image %}
+				<img src="{{ profile.profile_image.url }}" width="300">
+				<br/><br/>
+			{% endif %}
+
+
 			<div class="card">
   				<h5 class="card-header">Follows</h5>
   				<div class="card-body">
