added ProfilePicForm for user to update theis profiles

--- a/social/musker/templates/update_user.html
+++ b/social/musker/templates/update_user.html
@@ -3,15 +3,21 @@
 {% block content %}
 
 <div class="col-md-6 offset-md-3">
-<h1>Update User</h1>
-<br/>
-
-<form method="POST" action="">
-	{% csrf_token %}
-	{{ form.as_p }}
+	<h1>Update User</h1>
 	<br/>
-  	<button type="submit" class="btn btn-secondary">Update Profile</button>
-</form>
+	
+	<form method="POST" action="" enctype="multipart/form-data">
+		{% csrf_token %}
+		{{ user_form.as_p }}
+		<br/>
+
+		<img src="{{ profile_user.profile_image.url }}" width="300" align="right">
+
+		{{ profile_form.as_p}}
+
+		<br/><br/>
+		  <button type="submit" class="btn btn-secondary">Update Profile</button>
+	</form>
 
 </div>
 
