added rounded profile pics on all pages

--- a/social/musker/templates/update_user.html
+++ b/social/musker/templates/update_user.html
@@ -11,7 +11,7 @@
 		{{ user_form.as_p }}
 		<br/>
 
-		<img src="{{ profile_user.profile_image.url }}" width="300" align="right">
+		<img src="{{ profile_user.profile_image.url }}" class="rounded-circle" width="300" align="right">
 
 		{{ profile_form.as_p}}
 
