--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 
 {% if profile %}
@@ -12,12 +13,30 @@
 			{% if meeps %}
 				{% for meep in meeps %}
 					<div class="alert alert-dark" role="alert">
-						{{ meep.body }}<br/>
-			  				<small class="text-muted">
-			  					({{ meep.created_at}}) By 
-			  					@{{ meep.user.username }}
-			  				</small>
-					</div><br/><br/>
+						<div class="container">
+							<div class="row">
+
+								<div class="col-1">
+									{% if profile.profile_image %}
+									<img src="{{ profile.profile_image.url }}" width=50 height=50 class="rounded-circle" alt="{{ profile.user.username }}">					
+									{% else %}
+									<img src="{% static 'images/default_profile_pic.png' %}" width=50 height=50 class="rounded-circle" alt="{{ profile.user.username }}">
+									{% endif %}
+								</div>
+
+								<div class="col-11">
+									{{ meep.body }}<br/>
+			  						<small class="text-muted">
+			  							({{ meep.created_at}}) By 
+			  							@{{ meep.user.username }}
+			  						</small>
+								</div>
+
+								<br/><br/>
+
+							</div>
+						</div>
+					</div>
 				{% endfor %}
 			{% endif %}
 		</div>
@@ -27,7 +46,7 @@
 
 
 			{% if profile.profile_image %}
-				<img src="{{ profile.profile_image.url }}" width="300">
+				<img src="{{ profile.profile_image.url }}" class="rounded-circle" width="300">
 				<br/><br/>
 			{% endif %}
 
