--- a/social/musker/templates/update_user.html
+++ b/social/musker/templates/update_user.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
 
 <div class="col-md-6 offset-md-3">
@@ -11,7 +11,11 @@
 		{{ user_form.as_p }}
 		<br/>
 
-		<img src="{{ profile_user.profile_image.url }}" class="rounded-circle" width="300" align="right">
+		{% if profile_user.profile_image %}
+      		<img src="{{ profile_user.profile_image.url }}" width=200 height=200 class="img-fluid rounded-start" alt="{{profile.user.username}}" align="right">
+      	{% else %}
+      		<img src="{% static 'images/default_profile_pic.png' %}" class="img-fluid rounded-start" alt="Profile Image" align="right">
+      	{% endif %}
 
 		{{ profile_form.as_p}}
 
