--- a/social/musker/templates/home.html
+++ b/social/musker/templates/home.html
@@ -28,10 +28,15 @@
 							- {{ meep.number_of_likes }} Likes - 
 
 							{% if user in meep.likes.all %}
-							<a href="{% url 'meep_like' meep.id %}">UnLike</a>
+								<a href="{% url 'meep_like' meep.id %}">
+									<i class="fa-solid fa-heart" style="color:red"></i>
+								</a>
 							{% else %}
-								<a href="{% url 'meep_like' meep.id %}">Like</a>
-							{% endif %}		  				</small>
+								<a href="{% url 'meep_like' meep.id %}">
+									<i class="fa fa-heart-o" style="color:red"></i>
+								</a>
+							{% endif %}
+						</small>
 					</div>
 
 					<br/><br/>
