--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -29,17 +29,17 @@
 			  						<small class="text-muted">
 			  							({{ meep.created_at}}) By 
 			  							@{{ meep.user.username }}
-										- {{ meep.number_of_likes }} Likes -
+										&nbsp;&nbsp;
+										{{ meep.number_of_likes }}
 
 										{% if user in meep.likes.all %}
-											<a href="{% url 'meep_like' meep.id %}">
-												<i class="fa-solid fa-heart" style='color:red'></i>
-											</a>
+											<a href="{% url 'meep_like' meep.id %}"><i class="fa-solid fa-heart" style='color:red'></i></a>
 										{% else %}
-											<a href="{% url 'meep_like' meep.id %}">
-												<i class="fa fa-heart-o" style="color:red"></i>
-											</a>
+											<a href="{% url 'meep_like' meep.id %}"><i class="fa fa-heart-o" style="color:red"></i></a>
 										{% endif %}
+
+										&nbsp;&nbsp;
+		  								<a href="{% url 'meep_show' meep.id %}"><i class="fa-solid fa-share" style="color:gray"></i></a>
 
 			  						</small>
 								</div>
@@ -58,9 +58,9 @@
 
 
 			{% if profile.profile_image %}
-				<img src="{{ profile.profile_image.url }}" class="rounded-circle" width="300">
+				<img src="{{ profile.profile_image.url }}" class="rounded-circle" width=300 height=300>
 				<br/><br/>
-			{% endif %}
+				{% endif %}
 
 
 			<div class="card">
