--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -60,7 +60,38 @@
 			{% if profile.profile_image %}
 				<img src="{{ profile.profile_image.url }}" class="rounded-circle" width=300 height=300>
 				<br/><br/>
-				{% endif %}
+			{% endif %}
+
+
+			{% if profile.homepage_link %}
+				<a href="{{ profile.homepage_link }}" target="new"><i class="fa-solid fa-link" style="color:gray"></i></a>
+			{% endif %}
+
+			&nbsp;&nbsp;
+
+			{% if profile.facebook_link %}
+				<a href="{{ profile.facebook_link }}" target="new"><i class="fa-brands fa-facebook-f" style="color:gray"></i></a>
+			{% endif %}
+
+			&nbsp;&nbsp;
+
+			{% if profile.instagram_link %}
+				<a href="{{ profile.instagram_link }}" target="new"><i class="fa-brands fa-instagram" style="color:gray"></i></a>
+			{% endif %}
+
+			&nbsp;&nbsp;
+
+			{% if profile.telegram_link %}
+				<a href="{{ profile.telegram_link }}" target="new"><i class="fa-brands fa-telegram" style="color:gray"></i></a>
+			{% endif %}
+
+			<br/><br/>
+
+			{% if profile.profile_bio %}
+			<p align="justify">{{profile.profile_bio }}</p>
+			{% endif %}
+
+			<br/><br/>
 
 
 			<div class="card">
