you can follow back to users that followed you in followed_by list

--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -88,7 +88,7 @@
 			<br/><br/>
 
 			{% if profile.profile_bio %}
-			<p align="justify">{{profile.profile_bio }}</p>
+				<p align="justify">{{profile.profile_bio }}</p>
 			{% endif %}
 
 			<br/><br/>
@@ -99,11 +99,9 @@
   				<div class="card-body">
     				<p class="card-text">
     					{% for following in profile.follows.all %}
-						<a href="{% url 'profile' following.user.id %}">@{{ following }}</a> 
-						<a href="{% url 'unfollow' following.user.id %}">
-						<i class="fa fa-undo small" style="color:gray"></i>
-					</a>
-					<br/>
+						<a href="{% url 'profile' following.user.id %}">@{{ following }}</a> &nbsp;&nbsp;
+						<a href="{% url 'unfollow' following.user.id %}"><i class="fa fa-user-minus small" style="color:gray"></i></a>
+							<br/>
 						{% endfor %}
 					</p>
 				</div>
@@ -118,7 +116,17 @@
   				<div class="card-body">
     				<p class="card-text">
     					{% for following in profile.followed_by.all %}
-							<a href="{% url 'profile' following.user.id %}">@{{ following }}</a><br/>
+							<a href="{% url 'profile' following.user.id %}">@{{ following }}</a>
+							&nbsp;&nbsp;
+
+							{% if following not in profile.follows.all %}
+						 		<a href="{% url 'follow' following.user.id %}"><i class="fa fa-user-plus small" style="color:gray"></i></a>
+							{% endif %}
+	
+							<!-- <a href="{% url 'unfollow' following.user.id %}"><i class="fa fa-user-minus small" style="color:gray"></i></a> -->
+
+
+							<br/>
 						{% endfor %}
     				</p>
   				</div>
