--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -99,12 +99,14 @@
   				<div class="card-body">
     				<p class="card-text">
     					{% for following in profile.follows.all %}
+						{% if profile.pk is not following.pk %}
 						<a href="{% url 'profile' following.user.id %}">@{{ following }}</a> &nbsp;&nbsp;
 						{% if profile.pk == user.pk %}
 						<a href="{% url 'unfollow' following.user.id %}"><i class="fa fa-user-minus small" style="color:gray"></i></a>
 						<br/>
 						{% else %}
 						<br/>
+						{% endif %}
 						{% endif %}
 						{% endfor %}
 					</p>
@@ -122,24 +124,28 @@
   				<h5 class="card-header">Followed By</h5>
   				<div class="card-body">
     				<p class="card-text">
-						{% for following in profile.followed_by.all|slice:3 %}
+						{% for following in profile.followed_by.all|slice:3 %}						
+
+						{% if profile.pk is not following.pk %}
 							<a href="{% url 'profile' following.user.id %}">@{{ following }}</a>
-							&nbsp;&nbsp;
+								&nbsp;&nbsp;
 
-							{% if profile.pk == user.pk %}
-								{% if following in profile.follows.all %}
-									<a href="{% url 'unfollow' following.user.id %}"><i class="fa fa-user-minus small" style="color:gray"></i></a>
-								{% else %}
-									<a href="{% url 'follow' following.user.id %}"><i class="fa fa-user-plus small" style="color:gray"></i></a>
+								{% if profile.pk == user.pk %}
+									{% if following in profile.follows.all %}
+										<a href="{% url 'unfollow' following.user.id %}"><i class="fa fa-user-minus small" style="color:gray"></i></a>
+									{% else %}
+										<a href="{% url 'follow' following.user.id %}"><i class="fa fa-user-plus small" style="color:gray"></i></a>
+									{% endif %}
 								{% endif %}
-							{% endif %}
 
-							<br/>
+								<br/>
+						{% endif %}
+
 						{% endfor %}
 					</p>
 						
 				</div>
-				
+
 				<div class="card-footer text-end">
 					<a href="{% url 'followers' profile.user.id %}" class="btn btn-small btn-outline-secondary" >See All...</a>
 				</div>
