now you can see others followers and follows lists

--- a/social/musker/templates/followers.html
+++ b/social/musker/templates/followers.html
@@ -2,12 +2,13 @@
 {% load static %}
 
 {% block content %}
-	<h1>Your Followers</h1>
+	<h1>{{profiles.user.username}} Followers</h1>
 <br/>
 
 {% if profiles %}
 
 	{% for profile in profiles.followed_by.all %}
+  {% if profile.pk is not profiles.pk %}
 
 		<div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
@@ -46,6 +47,7 @@
 <br/><br/>
 
 
+{% endif %}
 
 	{% endfor %}
 
