--- a/social/musker/templates/followers.html
+++ b/social/musker/templates/followers.html
@@ -2,7 +2,12 @@
 {% load static %}
 
 {% block content %}
-	<h1>{{profiles.user.username}} Followers</h1>
+{% if profiles.pk is user.pk %}
+  <h1>Your Followers</h1>
+{% else %}
+	<h1>{{profiles.user.username}}'s Followers</h1>
+{% endif %}
+
 <br/>
 
 {% if profiles %}
@@ -26,6 +31,7 @@
     <div class="col-md-8">
       <div class="card-body">
         <h5 class="card-title">{{ profile.user.username }}
+          {% if profiles.pk == user.pk %}
         {% if profile in profiles.follows.all %}
 <a href="{% url 'unfollow' profile.user.id %}">
 <i class="fa fa-user-minus small" style="color:gray"></i>
@@ -34,6 +40,7 @@
  <a href="{% url 'follow' profile.user.id %}">
  <i class="fa fa-user-plus small" style="color:gray"></i>
   </a>
+           {% endif %}
            {% endif %}
 
         </h5>
