--- a/social/musker/templates/home.html
+++ b/social/musker/templates/home.html
@@ -13,11 +13,15 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-1">
+			
+						<a href="{% url 'profile' meep.user.pk %}">
 						{% if meep.user.profile.profile_image %}
 							<img src="{{ meep.user.profile.profile_image.url }}" width=50 height=50 class="rounded-circle" alt="{{ profile.user.username }}">
 						{% else %}
 							<img src="{% static 'images/default_profile_pic.png' %}" width=50 height=50 class="rounded-circle" alt="{{ profile.user.username }}">	
 						{% endif %}
+						</a>
+
 					</div>
 			
 					<div class="col-11">
