--- a/social/musker/templates/home.html
+++ b/social/musker/templates/home.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block content %}
 
-	<div class="container text-center">
-		<div class="row">
-			<div class="col-8">
+<div class="container text-center">
+	<div class="row">
+		<div class="col-8">
 
 	<h1>Meeps!</h1>
 <br/>
@@ -62,6 +62,25 @@
 
   <button type="submit" class="btn btn-secondary">Post Meep!</button>
 </form>
+
+{% else %}
+
+<div class="card text-center">
+	<div class="card-header">
+	  Wanna post Meeps?
+	</div>
+	<div class="card-body">
+	  <h5 class="card-title"><br/>Create an Account!<br/></h5>
+	  <a href="{% url 'register' %}" class="btn btn-primary btn-lg">Register</a><br/><br/>
+	  <p class="card-text">or you alredy have?</p>
+	  <a href="{% url 'login' %}" class="btn btn-outline-primary">Login</a><br/><br/>
+	</div>
+	<div class="card-footer text-body-secondary">
+	  What are you waiting for?
+	</div>
+  </div>
+
+
 {% endif %}
 </div>
 
