--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -39,7 +39,13 @@
 										{% endif %}
 
 										&nbsp;&nbsp;
-		  								<a href="{% url 'meep_show' meep.id %}"><i class="fa-solid fa-share" style="color:gray"></i></a>
+										<a href="{% url 'meep_show' meep.id %}"><i class="fa-solid fa-share" style="color:gray"></i></a>
+
+
+										{% if request.user.username == profile.user.username %}
+													  &nbsp;&nbsp;
+										<a href="{% url 'delete_meep' meep.id %}"><i class="fa fa-trash" style="color:gray"></i></a>
+										{% endif %}
 
 			  						</small>
 								</div>
@@ -113,7 +119,7 @@
 				</div>
 
 				<div class="card-footer text-end">
-					<a href="{% url 'follows' profile.user.id %}" class="btn btn-small btn-outline-secondary" >See All...</a>
+					<a href="{% url 'follows' profile.user.id %}" class="btn btn-small btn-outline-secondary">See All...</a>
 				</div>
 			</div>
 
