--- a/social/musker/templates/home.html
+++ b/social/musker/templates/home.html
@@ -39,6 +39,13 @@
 							{% endif %}
 							&nbsp;&nbsp;
 							<a href="{% url 'meep_show' meep.id %}"><i class="fa-solid fa-share" style="color:gray"></i></a>
+							
+							{% if request.user.username == meep.user.username %}
+							&nbsp;&nbsp;
+							<a href="{% url 'edit_meep' meep.id %}"><i class="fa fa-edit" style="color:gray"></i></a>
+							&nbsp;&nbsp;
+							<a href="{% url 'delete_meep' meep.id %}"><i class="fa fa-trash" style="color:gray"></i></a>
+							{% endif %}
 
 						</small>
 					</div>
