--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -41,9 +41,10 @@
 										&nbsp;&nbsp;
 										<a href="{% url 'meep_show' meep.id %}"><i class="fa-solid fa-share" style="color:gray"></i></a>
 
-
+										&nbsp;&nbsp;
+										<a href="{% url 'edit_meep' meep.id %}"><i class="fa fa-edit" style="color:gray"></i></a>
 										{% if request.user.username == profile.user.username %}
-													  &nbsp;&nbsp;
+										&nbsp;&nbsp;
 										<a href="{% url 'delete_meep' meep.id %}"><i class="fa fa-trash" style="color:gray"></i></a>
 										{% endif %}
 
