--- a/social/musker/templates/navbar.html
+++ b/social/musker/templates/navbar.html
@@ -27,12 +27,17 @@
           href="{% url 'login' %}">Login</a>
         </li>
         {% endif %}
+
+        <li class="nav-item">
+          <a class="nav-link" 
+          href="{% url 'search' %}">Search</a>
+        </li>
           
         </ul>
         <!-- <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
-        </form> -->
+        </form> -->      
 
         {% if user.is_authenticated %}
         <ul class="navbar-nav ml-auto">
