--- a/social/musker/templates/navbar.html
+++ b/social/musker/templates/navbar.html
@@ -9,10 +9,21 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-        <a class="nav-link" 
-        href="{% url 'profile_list' %}">Profile List</a>
+        <!-- <a class="nav-link" 
+        href="{% url 'profile_list' %}">Profile List</a> -->
           
         {% if user.is_authenticated %}
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Search
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="{% url 'search' %}">Search Meeps</a></li>
+            <li><a class="dropdown-item" href="{% url 'search_user' %}">Search Users</a></li>
+          </ul>
+        </li>
+
         <li class="nav-item">
           <a class="nav-link" 
           href="{% url 'logout' %}">Logout</a>
@@ -27,11 +38,6 @@
           href="{% url 'login' %}">Login</a>
         </li>
         {% endif %}
-
-        <li class="nav-item">
-          <a class="nav-link" 
-          href="{% url 'search' %}">Search</a>
-        </li>
           
         </ul>
         <!-- <form class="d-flex" role="search">
