--- a/social/musker/templates/search.html
+++ b/social/musker/templates/search.html
@@ -11,7 +11,7 @@
 {% csrf_token %}
 <input type="input" class="form-control"  placeholder="Search Meeps" name="search">
 <br/><br/>
-  <button type="submit" class="btn btn-secondary">Search Meep!</button>
+  <button type="submit" class="btn btn-secondary">Search Meeps!</button>
 </form>
 
 <br/><br/>
