--- a/social/musker/templates/followers.html
+++ b/social/musker/templates/followers.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 {% if profiles.pk is user.pk %}
-  <h1>Your Followers are {{ followers }} People</h1>
+  <h1>You Have {{ followers }} Followers</h1>
 {% else %}
-	<h1>{{profiles.user.username}}'s Followers are {{ followers }} People</h1>
+	<h1>{{profiles.user.username}} Has {{ followers }} Followers</h1>
 {% endif %}
 
 <br/>
