--- a/social/musker/templates/follows.html
+++ b/social/musker/templates/follows.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 {% if profiles.pk is user.pk %}
-  <h1>You Follow {{ follows }} People</h1>
+  <h1>You Have {{ follows }} Follows</h1>
 {% else %}
-	<h1>{{profiles.user.username}} Follows {{ follows }} People</h1>
+	<h1>{{profiles.user.username}} Has {{ follows }} Follows</h1>
 {% endif %}
 
 <br/>
