--- a/social/musker/templates/follows.html
+++ b/social/musker/templates/follows.html
@@ -15,43 +15,41 @@
 	{% for profile in profiles.follows.all %}
   {% if profile.pk is not profiles.pk %}
 
-		<div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      {% if profile.profile_image %}
-      <img src="{{ profile.profile_image.url }}" width=200 height=200 class="img-fluid rounded-start" alt="{{profile.user.username}}">
-      {% else %}
+	<div class="alert alert-dark" role="alert">
+    <div class="container text-center">
+      <div class="row g-6">
 
-      <img src="{% static 'images/default_profile_pic.png' %}" class="img-fluid rounded-start" alt="Profile Image">
+        <div class="col-2">    
+          <a href="{% url 'profile' profile.user.pk %}">
+          {% if profile.profile_image %}
+            <img src="{{ profile.profile_image.url }}" width=100 height=100 class="rounded-circle" alt="{{ profile.user.username }}">
+          {% else %}
+            <img src="{% static 'images/default_profile_pic.png' %}" width=100 height=100 class="rounded-circle" alt="{{ profile.user.username }}">	
+          {% endif %}
+          </a>
+          <h3 class="card-title">{{ profile.user.username }}</h3>
+          <small class="text-muted">Last Updated: {{ profile.date_modified }}</small>
+        </div>
 
-      {% endif %}
+        <div class="col-3">
+          {% if profile.profile_bio %}
+            {{ profile.profile_bio }}
+          {% endif %}
 
+          <br/><br/>
 
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">{{ profile.user.username }}
           {% if profiles.pk == user.pk %}
-        {% if profile in profiles.follows.all %}
-<a href="{% url 'unfollow' profile.user.id %}">
-<i class="fa fa-user-minus small" style="color:gray"></i>
-  </a>
-           {% else %}
- <a href="{% url 'follow' profile.user.id %}">
- <i class="fa fa-user-plus small" style="color:gray"></i>
-  </a>
-           {% endif %}
-           {% endif %}
-
-        </h5>
-        <p class="card-text"><a href="{% url 'profile' profile.user.id %}">@{{ profile.user.username|lower }}</a></p>
-        <br/><br/>
-        <p class="card-text"><small class="text-muted">Last Updated: {{ profile.date_modified }}</small></p>
+            <a href="{% url 'unfollow' profile.user.id %}">
+              <button class="btn btn-outline-danger">Unfollow {{profile.user.username}}</button>
+            </a>
+          {% endif %}
+        
+        </div>
+      
       </div>
     </div>
   </div>
-</div>
-<br/><br/>
+<br/>
 
 {% endif %}
 
