--- a/social/musker/templates/search_user.html
+++ b/social/musker/templates/search_user.html
@@ -21,26 +21,51 @@
 <br/>
 
 {% for user in searched %}
-	<div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      {% if user.profile.profile_image %}
-      <img src="{{ user.profile.profile_image.url }}" width=200 height=200 class="img-fluid rounded-start" alt="{{profile.user.username}}">
-      {% else %}
-      <img src="{% static 'images/default_profile_pic.png' %}" class="img-fluid rounded-start" alt="Profile Image">
-      {% endif %}
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">{{ user.username }}</h5>
-        <p class="card-text"><a href="{% url 'profile' user.id %}">@{{ user.username|lower }}</a></p>
-        <br/><br/>
-        <p class="card-text"><small class="text-muted">Last Updated: {{ user.profile.date_modified }}</small></p>
+  {% if user.pk is not request.user.pk %}
+
+	<div class="alert alert-dark" role="alert">
+    <div class="container text-center">
+      <div class="row g-6">
+
+        <div class="col-2">    
+          <a href="{% url 'profile' user.pk %}">
+          {% if user.profile.profile_image %}
+            <img src="{{ user.profile.profile_image.url }}" width=100 height=100 class="rounded-circle" alt="{{ user.username }}">
+          {% else %}
+            <img src="{% static 'images/default_profile_pic.png' %}" width=100 height=100 class="rounded-circle" alt="{{ user.username }}">	
+          {% endif %}
+          </a>
+          <h3 class="card-title">{{ user.username }}</h3>
+          <small class="text-muted">Last Updated: {{ user.profile.date_modified }}</small>
+        </div>
+
+        <div class="col-3">
+          {% if user.profile.profile_bio %}
+            {{ user.profile.profile_bio }}
+          {% endif %}
+
+          <br/><br/>
+
+          {% if user.profile in request.user.profile.follows.all %}
+            <a href="{% url 'unfollow' user.id %}">
+              <button class="btn btn-outline-danger">Unfollow {{user.username}}</button>
+            </a>
+            {% else %}
+            <a href="{% url 'follow' user.id %}">
+              <button class="btn btn-outline-success">Follow {{user.username}}</button>
+            </a>
+           {% endif %}
+
+        </div>
+      
       </div>
     </div>
   </div>
-</div>
-<br/><br/>
+<br/>
+
+{% endif %}
+
+
 {% endfor %}
 
 {% else %}
