--- a/social/musker/templates/profile.html
+++ b/social/musker/templates/profile.html
@@ -66,9 +66,11 @@
 
 			{% if profile.profile_image %}
 				<img src="{{ profile.profile_image.url }}" class="rounded-circle" width=300 height=300>
-				<br/><br/>
+			{% else %}
+				<img src="{% static 'images/default_profile_pic.png' %}" width=300 height=300 class="rounded-circle">
 			{% endif %}
 
+			<br/><br/>
 
 			{% if profile.homepage_link %}
 				<a href="{{ profile.homepage_link }}" target="new"><i class="fa-solid fa-link" style="color:gray"></i></a>
